tests/compilefail58.out
[1mtests/compilefail58.pas:18:7: [0m[1m[91merror:[0m Error D.1: Incorrect type for array index
    18 | 	a[c, i] := True;